# difunct

./: README.md  pyproject.toml
src/difunct/: engagement.py  functionnectome.py  utilities.py
