[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "difunct"
authors = [
    {name = "Sam Williams", email = "s.willowmalak@gmail.com"},
]
readme="README.md"
description = "Implements functions for the combined analysis of diffusion and functional MRI data."
keywords = ["fMRI", "dMRI", "functionnectome", "engagement"]
license = "GPL-3.0-only"
classifiers = ['Intended Audience :: Science/Research',
                'Natural Language :: English',
                'Programming Language :: Python',
]
dependencies = ['numpy',
                'networkx',
                'nibabel',
                'nilearn',
                'dipy',
                'tqdm',
                'unravel-python',
                'sparse',
                'scipy'
]
version = "0.0.1"

[project.urls]
"GitHub" = "https://github.com/WILLOWMALAK/difunct?tab=readme-ov-file"

[tool.setuptools.packages.find]
where = ["src"] 